# FlowerStore

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
flower_workshop/: manage.py
flower_workshop/bouquets/: admin.py  models.py  urls.py  views.py
flower_workshop/bouquets/migrations/: 0001_initial.py  0002_bouquet_bouquetflower.py  0003_bouquet_recommended.py  0004_alter_bouquet_events.py
flower_workshop/consultation/: admin.py  forms.py  models.py  urls.py  views.py
flower_workshop/consultation/migrations/: 0001_initial.py
flower_workshop/flower_store/: views.py
flower_workshop/flower_store/templates/: card.html  catalog.html  consultation.html  order-step.html  order.html  quiz-step.html
flower_workshop/flower_workshop/: asgi.py  settings.py  urls.py  wsgi.py
flower_workshop/home/: urls.py  views.py
flower_workshop/orders/: admin.py  models.py  urls.py  views.py
flower_workshop/orders/migrations/: 0001_initial.py  0002_order_phone_alter_order_address_alter_order_bouquet_and_more.py  0003_alter_order_status.py  0004_remove_order_from_delivery_time_and_more.py  0005_alter_order_client_alter_order_courier_and_more.py  0006_order_client_name.py  0007_order_paid.py
flower_workshop/static/css/: main.css
flower_workshop/templates/: 403.html  404.html  500.html  base.html  footer.html  header.html
flower_workshop/templates/bouqets/: result.html
flower_workshop/templates/bouquets/: card.html  catalog.html  quiz-step.html  quiz.html  result.html
flower_workshop/users2/: admin.py  models.py
(+18 files in other folders)
