[tool.poetry]
name = "flowerstore"
version = "0.1.0"
description = ""
authors = ["Pavel2232 <106510078+Pavel2232@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.7.2"
django = "4.2.4"
django-model-utils = "4.3.1"
sqlparse = "0.4.4"
typing-extensions = "4.7.1"
django-phonenumber-field = "^7.1.0"
phonenumbers = "^8.13.18"
pillow = "^10.0.0"
django-htmx = "^1.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
